# leveldb-rs

./: .gitignore  .travis.yml  Cargo.toml  LICENSE-MIT  Makefile  build.rs
leveldb-sys/src/: build.rs
misc/: valgrind.osx10.8.supp
snappy-sys/: Cargo.toml
snappy-sys/src/: build.rs
src/: base.rs  ffi.rs  lib.rs
