[package]

name = "leveldb-rs"
version = "0.0.5"
authors = ["Andrew Dunham <andrew@du.nham.ca>"]

description = "Bindings to the LevelDB key/value storage library (https://github.com/google/leveldb)"
documentation = "http://rust-ci.org/andrew-d/leveldb-rs/doc/leveldb/"
repository = "https://github.com/andrew-d/leveldb-rs"
keywords = ["bindings", "database", "leveldb"]
license = "MIT"

[features]
snappy = ["leveldb-sys/snappy"]

[dependencies]
libc = "*"

[dependencies.leveldb-sys]
path = "leveldb-sys"
version = "0.0.3"

[dev-dependencies]
tempdir = "0.3.0"
